--- a/style.css
+++ b/style.css
@@ -62,6 +62,8 @@ header h1{
 }
 header ul{
     display:flex;
+    justify-content:center;
+    align-items:center;
     gap:1.5rem;
     list-style:none;
     font-weight:700;
@@ -69,11 +71,12 @@ header ul{
 }
 header ul li {
     cursor:pointer;
+    font-size:1.2rem;
 }
 header ul li:hover {
-   transition:color ease-in-out 0.3s , transform ease-in-out 0.3s;
+   transition:ease-in-out 0.3s;
    color:var(--key-color);
-   transform:scale(110%);
+   font-size:150%;
 }
 section{
     height:80vh;
